still working on stretch.  Having trouble getting new less file to update correctly.

--- a/contact.less
+++ b/contact.less
@@ -1,6 +1,12 @@
+.image-div {
+    width: 100%;
+
+    img {
+        width: 100%;  
+    }
+}
 
 address {
-    font-size: 2 rem;
-    font-family: 'Ubuntu', sans-serif;
-    
+    font-size: 5 rem;
+    font-family: 'Ubuntu', sans-serif; 
 }
